optimize VLOOKUP by returning SharedString if possible (tdf#139444)

Profiling shows that the slowness mostly comes from converting
the cell's SharedString to OUString and then the comparison
converts it back. To improve performance, return the SharedString
if possible and ignore the OUString.

Change-Id: Idb190bd0354cea3185e5ff9ebaf92cab63f23f70