sc/inc/column.hxx
@@ -368,10 +368,12 @@ public:
                            const ScInterpreterContext* pContext = nullptr ) const
         { return GetString( GetCellValue( rBlockPos, nRow ), nRow, pContext ); }
     double* GetValueCell( SCROW nRow );
-    OUString    GetInputString( SCROW nRow ) const
-        { return GetInputString( GetCellValue( nRow ), nRow ); }
-    OUString    GetInputString( sc::ColumnBlockConstPosition& rBlockPos, SCROW nRow ) const
-        { return GetInputString( GetCellValue( rBlockPos, nRow ), nRow ); }
+    // Note that if pShared is set and a value is returned that way, the returned OUString is empty.
+    OUString    GetInputString( SCROW nRow, const svl::SharedString** pShared = nullptr ) const
+        { return GetInputString( GetCellValue( nRow ), nRow, pShared ); }
+    OUString    GetInputString( sc::ColumnBlockConstPosition& rBlockPos, SCROW nRow,
+                    const svl::SharedString** pShared = nullptr ) const
+        { return GetInputString( GetCellValue( rBlockPos, nRow ), nRow, pShared ); }
     double      GetValue( SCROW nRow ) const;
     const EditTextObject* GetEditText( SCROW nRow ) const;
     void RemoveEditTextCharAttribs( SCROW nRow, const ScPatternAttr& rAttr );
@@ -747,7 +749,7 @@ private:
     SCROW FindNextVisibleRow(SCROW nRow, bool bForward) const;
 
     OUString GetString( const ScRefCellValue& cell, SCROW nRow, const ScInterpreterContext* pContext = nullptr ) const;
-    OUString GetInputString( const ScRefCellValue& cell, SCROW nRow ) const;
+    OUString GetInputString( const ScRefCellValue& cell, SCROW nRow, const svl::SharedString** pShared = nullptr ) const;
 
     /**
      * Called whenever the state of cell array gets modified i.e. new cell
