sc/inc/document.hxx
@@ -1189,7 +1189,9 @@ public:
     void                                      BlockFormulaGroupContextDiscard( bool block )
                                                   { mbFormulaGroupCxtBlockDiscard = block; }
 
-    SC_DLLPUBLIC OUString                     GetInputString( SCCOL nCol, SCROW nRow, SCTAB nTab ) const;
+    // Note that if pShared is set and a value is returned that way, the returned OUString is empty.
+    SC_DLLPUBLIC OUString                     GetInputString( SCCOL nCol, SCROW nRow, SCTAB nTab,
+                                                  const svl::SharedString** pShared = nullptr ) const;
     FormulaError                              GetStringForFormula( const ScAddress& rPos, OUString& rString );
     SC_DLLPUBLIC double                       GetValue( const ScAddress& rPos ) const;
     SC_DLLPUBLIC double                       GetValue( SCCOL nCol, SCROW nRow, SCTAB nTab ) const;
