sc/inc/table.hxx
@@ -448,7 +448,8 @@ public:
     void        SetRawString( SCCOL nCol, SCROW nRow, const svl::SharedString& rStr );
     OUString    GetString( SCCOL nCol, SCROW nRow, const ScInterpreterContext* pContext = nullptr ) const;
     double*     GetValueCell( SCCOL nCol, SCROW nRow );
-    OUString    GetInputString( SCCOL nCol, SCROW nRow ) const;
+    // Note that if pShared is set and a value is returned that way, the returned OUString is empty.
+    OUString    GetInputString( SCCOL nCol, SCROW nRow, const svl::SharedString** pShared = nullptr ) const;
     double      GetValue( SCCOL nCol, SCROW nRow ) const;
     const EditTextObject* GetEditText( SCCOL nCol, SCROW nRow ) const;
     void RemoveEditTextCharAttribs( SCCOL nCol, SCROW nRow, const ScPatternAttr& rAttr );
